--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ body {
 
 <div style="padding-left:16px">
   <h2>Voetbal Time</h2>
-  <p>Dit is een voetbal tijdschrift genaamd voetbal time in dit tijdschrift kan je veel informatie vinden over de top 4 beste competeties van de wereld, zoals de premier leauge, la liga, bundesliga en de Eredivisie.</p>
+  <p>Dit is een voetbal tijdschrift genaamd voetbal time in dit tijdschrift kan je veel informatie vinden over de top 4 beste competeties van de wereld, zoals de premier leauge, la liga, bundesliga en de Eredivisie. Ik wil deze site gaan maken omdat ik een grote voetbal liefhebber ben en het dus ook interresant vind om al deze informatie op te zoeken</p>
 </div>
 
 </body>
