--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@ body {
   <a class="active" href="#home">Home</a>
   <a href="#Premier leauge">Premier leauge</a>
  
-  <a href="#contact">La liga</a>
+  <a href="#La liga">La liga</a>
   <div class="topnav">
-    <a href="#search">Bundesliga </a>
-    <a href="#about">Eredivisie</a>
+    <a href="#Bundesliga">Bundesliga </a>
+    <a href="#Eredivisie">Eredivisie</a>
   </div>
 </div>
 
