--- a/index.html
+++ b/index.html
@@ -1,60 +1,56 @@
 <!DOCTYPE html>
 <html>
-<head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+* {box-sizing: border-box}
+body {font-family: Arial, Helvetica, sans-serif;}
+
+.navbar {
+  width: 100%;
+  background-color: #555;
+  overflow: auto;
 }
 
-.topnav {
-  overflow: hidden;
-  background-color: #333;
-}
-
-.topnav a {
+.navbar a {
   float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
+  padding: 12px;
+  color: white;
   text-decoration: none;
   font-size: 17px;
+  width: 20%; 
+  text-align: center;
 }
 
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
+.navbar a:hover {
+  background-color: #000;
 }
 
-.topnav a.active {
+.navbar a.active {
   background-color: #4CAF50;
-  color: white;
 }
 
-.topnav-right {
-  float: right;
+@media screen and (max-width: 500px) {
+  .navbar a {
+    float: none;
+    display: block;
+    width: 100%;
+    text-align: left;
+  }
 }
 </style>
-</head>
 <body>
 
-<div class="topnav">
-  <a class="active" href="#home">Home</a>
-  <a href="#Premier leauge">Premier leauge</a>
- 
-  <a href="#La liga">La liga</a>
-  <div class="topnav">
-    <a href="#Bundesliga">Bundesliga </a>
-    <a href="#Eredivisie">Eredivisie</a>
-  </div>
-</div>
 
-<div style="padding-left:16px">
-  <h2>Voetbal Time</h2>
-  <p>Dit is een voetbal tijdschrift genaamd voetbal time in dit tijdschrift kan je veel informatie vinden over de top 4 beste competeties van de wereld, zoals de premier leauge, la liga, bundesliga en de Eredivisie. Ik wil deze site gaan maken omdat ik een grote voetbal liefhebber ben en het dus ook interresant vind om al deze informatie op te zoeken</p>
+
+<div class="navbar">
+  <a class="active" href="index.html">Home</a> 
+  <a href="test1.html">test1</a> 
+  <a href="test2.html">Test2</a> 
+  <a href="test3.html">test3</a>
+  <a href="test4.html">test4</a>
 </div>
 
 </body>
-</html>
+</html> 
+
 
