--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 <div class="navbar">
   <a class="active" href="index.html">Home</a> 
-  <a href="test1.html">test1</a> 
-  <a href="test2.html">Test2</a> 
-  <a href="test3.html">test3</a>
-  <a href="test4.html">test4</a>
+  <a href="test1.html">Premier leauge</a> 
+  <a href="test2.html">Eredivisie</a> 
+  <a href="test3.html">La liga</a>
+  <a href="test4.html">Bundesliga</a>
 </div>
 
 </body>
