--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@ body {font-family: Arial, Helvetica, sans-serif;}
 </style>
 <body>
 
-
+  <h1>voetbal time</h1>
+  <p>Welkom bij Voetbal Time! Het is het mooiste voetbal tijdschrift van de wereld.
+    Hier leer je van alles over de geschiedenis van de top 5 beste competities van de wereld.
 
 <div class="navbar">
   <a class="active" href="index.html">Home</a> 
