--- a/test2.html
+++ b/test2.html
@@ -39,6 +39,32 @@ body {font-family: Arial, Helvetica, sans-serif;}
 }
 </style>
 <body>
+  <h1>Het ontstaan van de Eredivisie</h1>
+  <p>Het ontstaan van de Eredivisie gaat ver terug in de tijd. 
+    De voorloper van de Eredivisie was de kampioenscompetitie. 
+    Al sinds 1888 wordt er officieus gestreden om het Nederlands kampioenschap.
+    Met ingang van het seizoen 1898/'99 werd dit officieel, waarna Concordia uit Rotterdam zich als eerste landskampioen van Nederland mocht noemen.
+    Na de introductie van het betaald voetbal in 1954 werd twee jaar later de Eredivisie officieel opgericht. 
+    Zodoende zijn sinds 1956 de sterkste clubs van Nederland verenigd in één landelijke competitie.
+De Eredivisie telt vandaag de dag 18 clubs. 
+    De lijstaanvoerder na 34 speelrondes is officieel landskampioen, al wordt de kampioensschaal vaak eerder overhandigd als de lijstaanvoerder niet meer in te halen is op de ranglijst. Sinds het seizoen 2019/'20 degraderen zowel de nummer 17 als 18 rechtstreeks een divisie lager naar de Keuken Kampioen Divisie. De nummer 16 strijdt in de nacompetitie om lijfsbehoud in de Eredivisie. Ook bovenin de competitie zijn er sinds 2005/'06 play-offs: de Play-Offs voor Europees voetbal. In een reeks van finalewedstrijden strijden clubs om het laatste ticket voor de UEFA Europa League. 
+Als bakermat van het nationale voetbal heeft de Eredivisie wereldwijd een reputatie opgebouwd van aantrekkelijk, creatief en vernieuwend voetbal. 
+    Gevoed door de sterke Nederlandse voetbalcultuur staat de Eredivisie bovendien tot ver over de landsgrenzen bekend als een aanvallende en doelpuntrijke competitie en wordt beschouwd als een ideale broedplaats voor voetbaltalent. 
+    Door talenten de kans te geven zich te ontwikkelen in een aantrekkelijke en spannende competitie, wordt tevens een stevig fundament gelegd onder het Nederlands Elftal.
+In het eerste seizoen (1956) schreef PSV’er Coen Dillen meteen geschiedenis door liefst 43 keer te scoren, hetgeen nog altijd een record is. 
+    Ajax was dat jaar de eerste kampioen van de Eredivisie en wist zich in totaal 26 keer tot 'kampioen van de Eredivisie' te bekronen. 
+    Tel je daar ook de landstitels vóór de start van de Eredivisie (1956) bij op, dan kom je uit op 34 landstitels voor Ajax. PSV volgt met 21 eredivisiekampioenschappen (24 landstitels), gevolgd door Feyenoord met 10 eredivisietitels (15 landstitels). 
+    In 2009 werd de hegemonie van de ‘traditionele top drie’ doorbroken door AZ dat kampioen werd. 
+    Het was voor het eerst sinds 1981 (toen: AZ '67) dat een andere club dan Ajax, Feyenoord en PSV de kampioenschaal omhoog kon houden. 
+    In het seizoen daarna (2009/'10) viel deze eer voor het eerst in de geschiedenis te beurt aan FC Twente. 
+    Naast genoemde clubs hebben ook DOS (1957/'58), Sparta Rotterdam (1958/'59) en DWS (1963/'64) zich in een ver verleden tot kampioen van de Eredivisie bekroond.</p> 
+
+  <h2>Waar staat de eredivisie bekent om</h2>
+  <p>De Nederlandse competitie staat bekend om de aanvallende manier van voetballen. 
+    Het heeft zich tevens bewezen als een ideale broedplaats voor jonge buitenlandse spelers. 
+    Veel grote talenten zijn internationaal doorgebroken via de Eredivisie door zich daar te ontwikkelen en in de kijker te spelen van de grote Europese competities. 
+    Romario, Ronaldo, Nwanko Kanu, Jon Dahl Tomasson, Henrik Larsson, Jari Litmanen, Zlatan Ibrahimovic, Maxwell, Alex, Luis Suarez, Christian Eriksen, Memphis Depay, Frenkie de Jong en Matthijs De Ligt zijn hiervan slechts enkele voorbeelden.</p>
+  
 
 
 
