--- a/bundesliga.html
+++ b/bundesliga.html
@@ -3,10 +3,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 * {box-sizing: border-box}
-  background-image:url(https://img.fcbayern.com/image/upload/t_cms-9x12/f_auto/w_660,h_880,c_fill/v1605776478/cms/public/images/fcbayern-com/homepage/platzhalter/9x12/200316_buli-9x12.jpg);
+   body {
+	font-family: Arial, Helvetica, sans-serif;
+	background-image:url(https://img.fcbayern.com/image/upload/t_cms-9x12/f_auto/w_660,h_880,c_fill/v1605776478/cms/public/images/fcbayern-com/homepage/platzhalter/9x12/200316_buli-9x12.jpg);
 	background-position:bottom;
 	background-attachment:fixed;
 	background-repeat:no-repeat;
+	
+}
 
 .navbar {
   width: 100%;
