--- a/eredivisie.html
+++ b/eredivisie.html
@@ -3,10 +3,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 * {box-sizing: border-box}
-  background-image:url(https://skandersvoetbalartikelen.files.wordpress.com/2020/09/ere-2.jpg);
+  body {
+	font-family: Arial, Helvetica, sans-serif;
+	background-image:url(https://skandersvoetbalartikelen.files.wordpress.com/2020/09/ere-2.jpg);
 	background-position:bottom;
 	background-attachment:fixed;
 	background-repeat:no-repeat;
+	
+}
 
 .navbar {
   width: 100%;
