--- a/liga.html
+++ b/liga.html
@@ -3,10 +3,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 * {box-sizing: border-box}
-  background-image:url(https://img.jakpost.net/c/2019/05/16/2019_05_16_72382_1557949331._large.jpg);
+  body {
+	font-family: Arial, Helvetica, sans-serif;
+	background-image:url(https://img.jakpost.net/c/2019/05/16/2019_05_16_72382_1557949331._large.jpg);
 	background-position:bottom;
 	background-attachment:fixed;
 	background-repeat:no-repeat;
+	
+}
   
 .navbar {
   width: 100%;
